week14/haproxy/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
        - name: haproxy
          image: haproxy:latest
          volumeMounts:
            - name: config-volume
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
          ports:
            - containerPort: 80
      volumes:
        - name: config-volume
          configMap:
            name: haproxy-configmap

---

apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
spec:
  selector:
    app: haproxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
