week14/haproxy/haproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bookinfo.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: haproxy-service
                port:
                  number: 80
